[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/menus/connect_menu.gd" type="Script" id=1]
[ext_resource path="res://scripts/game_manager.gd" type="Script" id=2]
[ext_resource path="res://scripts/menus/lobby_8_ball.gd" type="Script" id=3]
[ext_resource path="res://scripts/menus/hud_8_ball.gd" type="Script" id=4]
[ext_resource path="res://scenes/Table.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/pool/game_manager_8_ball.gd" type="Script" id=6]
[ext_resource path="res://assets/images/balls/cue_ball.png" type="Texture" id=7]
[ext_resource path="res://scripts/pool/queue_controller.gd" type="Script" id=8]
[ext_resource path="res://icon.png" type="Texture" id=9]
[ext_resource path="res://scripts/pool/ball_in_hand.gd" type="Script" id=10]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=11]
[ext_resource path="res://scripts/pool/ball_placer.gd" type="Script" id=14]
[ext_resource path="res://scripts/pool/ball_manager_8_ball.gd" type="Script" id=15]

[sub_resource type="CircleShape2D" id=8]
radius = 116.364

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ConnectMenu" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="UI/ConnectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -92.0
margin_right = 152.0
margin_bottom = -62.0
placeholder_text = "Enter name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="UI/ConnectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -34.0
margin_right = 104.0
margin_bottom = 14.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="UI/ConnectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 84.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby_8Ball" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerList" type="PanelContainer" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -237.0
margin_right = 125.0
margin_bottom = -52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Lobby_8Ball/PlayerList"]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 178.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Lobby_8Ball/PlayerList/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "test 123 sdede"

[node name="T1Label" type="Label" parent="UI/Lobby_8Ball"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 71.0
margin_top = -120.0
margin_right = 308.0
margin_bottom = -75.0
text = "Team 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1List" type="PanelContainer" parent="UI/Lobby_8Ball"]
margin_left = 64.0
margin_top = 225.0
margin_right = 315.0
margin_bottom = 375.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Lobby_8Ball/T1List"]
margin_left = 7.0
margin_top = 7.0
margin_right = 244.0
margin_bottom = 143.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Lobby_8Ball/T1List/VBoxContainer"]
margin_right = 237.0
margin_bottom = 14.0
text = "test 123 sdede"

[node name="T2Label" type="Label" parent="UI/Lobby_8Ball"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -317.0
margin_top = -120.0
margin_right = -80.0
margin_bottom = -75.0
text = "Team 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2List" type="PanelContainer" parent="UI/Lobby_8Ball"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -75.0
margin_right = -74.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Lobby_8Ball/T2List"]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 143.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Lobby_8Ball/T2List/VBoxContainer"]
margin_right = 236.0
margin_bottom = 14.0
text = "test 123 sdede"

[node name="T1Button" type="Button" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -25.0
margin_right = -20.0
margin_bottom = 25.0
text = "< Team A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2Button" type="Button" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -25.0
margin_right = 120.0
margin_bottom = 25.0
text = "Team B >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomizeButton" type="Button" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 52.0
margin_right = 100.0
margin_bottom = 102.0
text = "Randomize Players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 148.0
margin_right = 100.0
margin_bottom = 198.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingLabel" type="Label" parent="UI/Lobby_8Ball"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 164.0
margin_right = 80.0
margin_bottom = 178.0
text = "Waiting for host to start..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hud_8Ball" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Inset" type="Control" parent="UI/Hud_8Ball"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentPlayer" type="VBoxContainer" parent="UI/Hud_8Ball/Inset"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.5
margin_right = 131.5
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamLabel" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer"]
margin_right = 263.0
margin_bottom = 14.0
text = "Current Team:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer/TeamLabel"]
margin_left = 135.0
margin_right = 262.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer"]
margin_top = 18.0
margin_right = 263.0
margin_bottom = 32.0
text = "Current Player:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer/NameLabel"]
margin_left = 135.0
margin_right = 262.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStateLabel" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer"]
margin_top = 36.0
margin_right = 263.0
margin_bottom = 50.0
text = "Game State:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameState" type="Label" parent="UI/Hud_8Ball/Inset/CurrentPlayer/GameStateLabel"]
margin_left = 135.0
margin_right = 262.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneralInfo" type="VBoxContainer" parent="UI/Hud_8Ball/Inset"]
margin_right = 130.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1TypeLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_right = 130.0
margin_bottom = 14.0
text = "Team 1 Ball Type:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1Type" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T1TypeLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="T1PocketedLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0
text = "Team 1 Pocketed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1Pocketed" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T1PocketedLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="T1EightTargetLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 50.0
text = "Team 1 Eight Target:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T1EightTarget" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T1EightTargetLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSeparator" type="HSeparator" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 54.0
margin_right = 130.0
margin_bottom = 58.0

[node name="T2TypeLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 62.0
margin_right = 130.0
margin_bottom = 76.0
text = "Team 2 Ball Type:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2Type" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T2TypeLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.10236
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="T2PocketedLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 80.0
margin_right = 130.0
margin_bottom = 94.0
text = "Team 2 Pocketed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2Pocketed" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T2PocketedLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="T2EightTargetLabel" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo"]
margin_top = 98.0
margin_right = 130.0
margin_bottom = 112.0
text = "Team 2 Eight Target:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T2EightTarget" type="Label" parent="UI/Hud_8Ball/Inset/GeneralInfo/T2EightTargetLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TurnInfo" type="VBoxContainer" parent="UI/Hud_8Ball/Inset"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -263.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstHitLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_right = 263.0
margin_bottom = 14.0
text = "First Hit:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstHit" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/FirstHitLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LegalPocketingLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_top = 18.0
margin_right = 263.0
margin_bottom = 32.0
text = "Legal Pocketing:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LegalPocketing" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/LegalPocketingLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FouledLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_top = 36.0
margin_right = 263.0
margin_bottom = 50.0
text = "Fouled:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fouled" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/FouledLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstHitLegalLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_top = 54.0
margin_right = 263.0
margin_bottom = 68.0
text = "First Hit Legal:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstHitLegal" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/FirstHitLegalLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WonLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_top = 72.0
margin_right = 263.0
margin_bottom = 86.0
text = "Won:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Won" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/WonLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LostLabel" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo"]
margin_top = 90.0
margin_right = 263.0
margin_bottom = 104.0
text = "Lost:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lost" type="Label" parent="UI/Hud_8Ball/Inset/TurnInfo/LostLabel"]
margin_left = 133.0
margin_right = 260.0
margin_bottom = 14.0
text = "aaaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_8Ball" type="Node2D" parent="."]
position = Vector2( 512, 354 )
script = ExtResource( 6 )
ball_manager_np = NodePath("BallManager")
queue_controller_np = NodePath("QueueController")

[node name="Table" parent="Game_8Ball" instance=ExtResource( 5 )]

[node name="BallManager" type="Node2D" parent="Game_8Ball"]
script = ExtResource( 15 )

[node name="BallHolder" type="Node2D" parent="Game_8Ball/BallManager"]

[node name="BallPlacer" type="Node2D" parent="Game_8Ball/BallManager"]
script = ExtResource( 14 )
ball_scn = ExtResource( 11 )
table_np = NodePath("../../Table")

[node name="BallInHand" type="Area2D" parent="Game_8Ball/BallManager"]
scale = Vector2( 0.0859375, 0.0859375 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game_8Ball/BallManager/BallInHand"]
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Game_8Ball/BallManager/BallInHand"]
texture = ExtResource( 7 )

[node name="QueueController" type="Node2D" parent="Game_8Ball"]
script = ExtResource( 8 )
force_mult = 5

[node name="QueueSprite" type="Sprite" parent="Game_8Ball/QueueController"]
position = Vector2( -72, -250 )
scale = Vector2( 5, 0.1 )
texture = ExtResource( 9 )
offset = Vector2( -32, 0 )

[node name="Node2D" type="Node2D" parent="Game_8Ball/QueueController/QueueSprite"]
rotation = 1.5708

[node name="Line2D" type="Line2D" parent="Game_8Ball/QueueController/QueueSprite/Node2D"]
points = PoolVector2Array( 0, 0, 0, -5000 )
width = 1.0

[connection signal="text_changed" from="UI/ConnectMenu/PlayerName" to="UI/ConnectMenu" method="_on_PlayerName_text_changed"]
[connection signal="pressed" from="UI/ConnectMenu/HostButton" to="UI/ConnectMenu" method="_on_HostButton_pressed"]
[connection signal="pressed" from="UI/ConnectMenu/JoinButton" to="UI/ConnectMenu" method="_on_JoinButton_pressed"]
[connection signal="pressed" from="UI/Lobby_8Ball/T1Button" to="UI/Lobby_8Ball" method="_on_T1Button_pressed"]
[connection signal="pressed" from="UI/Lobby_8Ball/T2Button" to="UI/Lobby_8Ball" method="_on_T2Button_pressed"]
[connection signal="pressed" from="UI/Lobby_8Ball/RandomizeButton" to="UI/Lobby_8Ball" method="_on_RandomizeButton_pressed"]
[connection signal="pressed" from="UI/Lobby_8Ball/StartButton" to="UI/Lobby_8Ball" method="_on_StartButton_pressed"]
[connection signal="ball_placed" from="Game_8Ball/BallManager/BallPlacer" to="Game_8Ball" method="_on_BallPlacer_ball_placed"]
